fix coolvetica not showing on iphone

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Helvetica';
+    font-family: 'Coolvetica';
     color: #fff;
     height: 54px;
 }
